# audit-packs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ANTIGRAVITY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  action.yml  audit-models.yaml  gemini.md  opencode.json  pyproject.toml  run_e2e_manual.py
.agent/: AGENTS.md  install.json
.agent/harness/hooks/: copilot_cli_post_tool.py
.agent/memory/: .features.json  archive.py  auto_dream.py  cluster.py  decay.py  memory_search.py  promote.py  render_lessons.py  review_state.py  validate.py
.agent/memory/candidates/: 2192fc739be0.json  402fd3ccc4f1.json  7f7272afb848.json  baa6eaefc841.json  d491c52f1b5e.json
.agent/memory/episodic/: AGENT_LEARNINGS.jsonl
.agent/memory/personal/: PREFERENCES.md
.agent/memory/semantic/: DECISIONS.md  LESSONS.md  lessons.jsonl
.agent/memory/team/: APPROVED_SKILLS.md  CONVENTIONS.md  DEPLOYMENT_LESSONS.md  INCIDENTS.md  REVIEW_RULES.md
.agent/memory/working/: REVIEW_QUEUE.md  WORKSPACE.md
.agent/skills/: _index.md  _manifest.jsonl
.agent/skills/brain/: SKILL.md
.agent/skills/data-flywheel/: SKILL.md
.agent/skills/data-layer/: SKILL.md
.agent/skills/debug-investigator/: SKILL.md
.agent/skills/deploy-checklist/: SKILL.md
.agent/skills/design-md/: SKILL.md
.agent/skills/git-proxy/: SKILL.md
.agent/skills/memory-manager/: SKILL.md
.agent/skills/skillforge/: SKILL.md
.agent/skills/tldraw/: SKILL.md  store.py
.agent/tools/: brain_bridge.py  recall.py  retract_lesson.py  skill_loader.py
.agents/: skills
.github/workflows/: publish-extension.yml  release.yml
ast-rules/: db-user-input.py  logging-pii.py  public-endpoint-pii.py  unmasked-pii-sink.py
docs/: ONBOARDING.md  SETUP.md
docs/superpowers/plans/: 2026-06-24-audit-packs-mvp.md  2026-06-25-compliance-frameworks-design.md  2026-06-26-architectural-alignment.md  2026-06-27-scanner-expansion.md
docs/superpowers/specs/: 2026-06-25-compliance-frameworks-design.md  2026-06-26-architectural-alignment-design.md  2026-06-27-scanner-expansion-design.md
examples/: README.md
examples/audit-models/: anthropic-only.yaml  local-ollama.yaml  mixed-cost-optimized.yaml  openai-only.yaml
examples/org-policy/: fintech.yaml  healthcare.yaml  saas-startup.yaml
examples/workflows/: basic.yml  nist-fedramp.yml  pci-iso27001.yml  scheduled-posture.yml  soc2-hipaa.yml  with-adjudication.yml  with-codeql.yml
packs/: fedramp.yaml  gdpr.yaml  hipaa.yaml  iso27001.yaml  nist-800-53.yaml  org-policy.yaml  pci-dss.yaml  soc2.yaml
packs/fedramp/: controls.yaml
packs/gdpr/: controls.yaml
packs/hipaa/: controls.yaml
packs/iso27001/: controls.yaml
packs/nist-800-53/: controls.yaml
packs/org-policy/: controls.yaml
packs/pci-dss/: controls.yaml
packs/soc2/: controls.yaml
real_world_fixtures/pygoat/: views.py  vulnerable_app.py
rules/: hardcoded-credential.yaml  insecure-config.yaml  missing-audit-log.yaml  weak-cipher.yaml
scripts/: migrate_packs_v2.py
src/audit_packs/: __init__.py  adjudicate.py  agents.py  cli.py  confidence.py  coverage.py  diff.py  engines.py  evidence.py  models.py  normalize.py  oscal.py  packs.py  report.py
tests/: docker_smoke.sh  test_adjudicate.py  test_adjudicate_import_error.py  test_agents.py  test_ast_rules.py  test_cli_assess_adjudication.py  test_cli_evidence_keying.py  test_cli_frameworks.py  test_cli_onboarding_and_notifications.py  test_cli_tfsec_gitleaks_wiring.py  test_cli_trivy_wiring.py  test_codeql_normalize.py  test_confidence.py  test_coverage.py  test_dataflow.py  test_diff.py  test_docker_smoke.py  test_e2e_integration.py  test_evidence.py  test_gitleaks_engine.py  test_integration.py  test_live_llm.py  test_models.py  test_normalize.py  test_oscal.py  test_pack_tooling_and_plugins.py  test_packs.py  test_real_world_repos.py  test_report.py  test_rules.py  test_semgrep_engine.py  test_skill_metadata.py  test_tfsec_engine.py  test_trivy_engine.py
(+36 files in other folders)
