[project]
name = "audit-packs"
version = "0.1.0"
description = "GitHub Action that maps IaC security findings to compliance controls and posts evidence-backed inline PR review comments."
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
audit-packs = "audit_packs.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
